[package]
name = "rust_errors_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
log_print = { path = "./crates/log_print" }

anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
time = { version = "0.3", features = ["macros"] }

eyre = { version = "0.6", default-features = false, features = [
    # "auto-install",
    # "track-caller",
] }
color-eyre = "0.6" # 用于各种错误的丰富多彩、一致且格式良好的错误报告的板条箱。
miette = { version = "7.6", features = [
    "fancy", # 花式打印机
] } # 是一个 Rust 的诊断库。它包含一系列特性/协议，允许您使用其错误报告功能，甚至编写您自己的错误报告！
snafu = "0.8"
